--- a/styles.css
+++ b/styles.css
@@ -140,3 +140,13 @@ body {
   font-size: 1rem;
   margin-bottom: 10px;
 }
+
+input#search-input {
+  margin: 10px 10px 10px;
+
+}
+
+button#search-btn.btn.btn-outline-light {
+  border-color: #000000;
+  border-width: 2px;
+}
