--- a/styles.css
+++ b/styles.css
@@ -117,11 +117,11 @@ button:hover {
 
 
 /* --------------------KL STYLE ADDED----------- */
-/* body {
+body {
   background-image: url(images/BG.jpeg);
   background-attachment: fixed;
 
-} */
+}
 
 .row1 {
   background-image: url(images/cover2.jpg);
