--- a/styles.css
+++ b/styles.css
@@ -59,7 +59,7 @@ button {
   border: none;
   border-radius: 5px;
   color: #fff;
-  background-color: #3498db;
+  background-color: #4d6f89;
   cursor: pointer;
   transition: all 0.3s ease;
 }
